# dodo

./: .gitignore  Cargo.toml  build.rs  run.sh  shell.nix  test.dodo  test.sh
dodo-assembler/: Cargo.toml
dodo-assembler/src/: architecture.rs  assembler.rs  elf.rs  instruction.rs  instructionstream.rs  lib.rs  x86.rs
dodo-compiler/: Cargo.toml  grammar.txt
dodo-compiler/src/: ast.rs  code_generator.rs  main.rs  parser.rs  tokenizer.rs  visitor.rs
dodo-core/: Cargo.toml
dodo-core/src/: types.rs
dodo-interpreter/: Cargo.toml
dodo-interpreter/src/: main.rs
dodo-parser/: Cargo.toml
dodo-parser/src/: parser.rs  tokenizer.rs
runtime/: runtime.h
src/: ast.rs  backend.rs  c_generator.rs  cpp.rs  error.rs  interpreter.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  project.rs  scope.rs  sema.rs  tokenizer.rs  type_checker.rs  typed_ast.rs  types.rs  x86_instruction.rs  x86_nasm.rs
src/backends/: c_backend.rs  c_generator.rs  cranelift_backend.rs  ir_backend.rs  llvm_backend.rs  mod.rs  x86_instruction.rs  x86_nasm.rs  x86_nasm_backend.rs
src/optimisations/: ast_walker.rs  constant_fold.rs  math_identities.rs  mod.rs  unnecessary_widen.rs
src/optimizations/: ast_walker.rs  constant_fold.rs  constant_propagation.rs  math_identities.rs  mod.rs  unnecessary_widen.rs
tests/: args.dodo  comparisons.dodo  failing.rs  failing_c.rs  failing_ir.rs  failing_x86.rs  fibonacci.dodo  lib.rs  math.dodo  passing.rs  passing_c.rs  passing_ir.rs  passing_x86.rs  pointers.dodo  print.dodo  scopes.dodo  string.dodo  syscall.dodo  test.rs  test_header  test_template
(+64 files in other folders)
