[package]
name = "dodo"
authors = ["Hector Peeters"]
version = "0.1.0"
edition = "2021"

[lib]
name = "dodo"

[[bin]]
name = "dodo"
path = "src/main.rs"

[dependencies]
regex = { version = "1.5.4", default-features = false, features = ["std"] }
ariadne = "0.1.3"
logos = "0.12"
clap = { version = "3.1", features = ["derive"] }
inkwell = { version = "0.2", features = ["llvm15-0"] }

[dev-dependencies]
test-generator = "0.3.0"
