[package]
name = "dodo"
authors = ["Hector Peeters"]
version = "0.1.0"
edition = "2021"

[lib]
name = "dodo"

[[bin]]
name = "dodo"
path = "src/main.rs"

[dependencies]
regex = { version = "1.5.4", default-features = false, features = ["std"] }
ariadne = "0.1.3"
logos = "0.13"
clap = { version = "3.1", features = ["derive"] }

[dev-dependencies]
test-generator = "0.3.0"
